<resources>
    <string name="app_name">SEFLA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="home">Home</string>
    <string name="sobre">Sobre</string>
    <string name="produtos">Produtos</string>
    <string name="servicos">Serviços</string>
    <string name="novidades">Novidades</string>
    <string name="contato">Contato</string>
    <string name="sefla">SEFLA</string>
    <string name="tapetes_e_decoracoes">Tapetes e Decorações</string>
    <string name="prod">Produtos</string>
    <string name="sair">Sair</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_youtube">YouTube</string>
    <string name="action_google_mail">Google Mail</string>
    <string name="action_linkedin">Linkedin</string>
    <string name="action_whatsapp">WhatsApp</string>

    <string name="action_add_favourite">Add to Favorites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">SEFLA</string>
    <string name="backdrop_subtitle">Tapetes e Decorações</string>
    <string name="exposicao_dos_produtos">Exposição dos Produtos</string>
    <string name="texto_exposicao_dos_produtos">Estamos expondo aos finais de semana na Feira de Antiguidade do MUBE - Museu Brasileiro de Esculturas - Jardim Europa/SP! Vendemos e compramos tapetes e produtos antigos!!</string>
    <string name="texto_exposicao_dos_produtos_ofertas">VENHA E APROVEITE NOSSAS OFERTAS!!</string>
</resources>
