<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.activity.ProdutoActivity">

    <item
        android:id="@+id/action_facebook"
        android:orderInCategory="100"
        android:title="@string/action_facebook"
        android:icon="@drawable/ic_action_facebook"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_youtube"
        android:orderInCategory="100"
        android:title="@string/action_youtube"
        android:icon="@drawable/ic_action_youtube"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_google_gmail"
        android:orderInCategory="100"
        android:title="@string/action_google_mail"
        android:icon="@drawable/ic_action_gmail"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_linkedin"
        android:orderInCategory="100"
        android:title="@string/action_linkedin"
        android:icon="@drawable/ic_action_linkedin"
        app:showAsAction="always"/>
</menu>